# game-off-2023

./: .pre-commit-config.yaml  ANXIOUSDJ-j.wav.import  ANXIOUSDJ.wav.import  BLUELIGHTS-reversed.wav.import  BLUELIGHTS.wav.import  DARKSOUP-1.wav.import  Dungeon Tile Set.png.import  EndBeam.gd  FiraMono-Medium.ttf.import  GRAYPULSAR-2_2.wav.import  GRAYPULSAR-2_4.wav.import  GRAYPULSAR-2_5.wav.import  GRAYPULSAR_2.wav.import  GUILTYNEBULA-constant.wav.import  GUILTYNEBULA.wav.import  IVORYOMEGA.wav.import  LASERLIMBO.wav.import  Level 3.tscn  MERRYTYPO.wav.import  NEONPLANT.wav.import  ParallaxBackground.gd  ParallaxLayer.gd  README.md  RespawnBeam.gd  SILLYBOND_2.wav.import  bg-2.png.import  bg-p.png.import  bg.png.import  bgtriggert.gd  clouds_black-2.png.import  clouds_black.png.import  clouds_white-2.png.import  clouds_white.png.import  control.tscn  controls.tscn  data.gd  dirt.png.import  dungeon_tileset.tres  end.gd  end.tscn  (+61 more)
assets/: BLUELIGHTS.wav.import  Character Idle 48x48.png.import  Dungeon Tile Set.png.import  GOLDDONUT.wav.import  Player Crouch-Idle 48x48.png.import  Player Roll 48x48.png.import  SOLARLAMP.wav.import  Wall Slide 48x48.png.import  Wall Slide flipped 48x48.png.import  clip-v2.mp3.import  landing.png.import  ok.png.import  pixel.png.import  player crouch-walk 48x48.png.import  player jump 48x48.png.import  player jump flipped 48x48.png.import  player land 48x48.png.import  player land flipped 48x48.png.import  run cycle 48x48.png.import  run cycle flipped 48x48.png.import  space.png.import  updown.png.import  wall land 48x48.png.import  (+2 more)
(+178 files in other folders)
