[tool.poetry]
name = "gorrilagame"
version = "0.1.0"
description = ""
authors = ["E <ethan@bouncebot.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdtoolkit = "^4.1.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
